fixed overflow bug

--- a/style.css
+++ b/style.css
@@ -143,7 +143,7 @@ a {
 
 .form {
   --width: min(90%, 655px);
-
+  overflow: hidden;
   position: absolute;
   background-color: var(--white);
   width: var(--width);
@@ -164,7 +164,7 @@ a {
   display: none;
   opacity: 0;
   transform: translateX(150px);
-  animation: move 200ms cubic-bezier(0.25, 0.46, 0.45, 0.94) forwards 200ms;
+  animation: move 250ms cubic-bezier(0.25, 0.46, 0.45, 0.94) forwards 150ms;
 }
 
 .form .step.active {
@@ -176,7 +176,7 @@ a {
   width: 100%;
 }
 .form label {
-  font-size: 0.82rem;
+  font-size: 0.8rem;
 }
 .form label:has(> .error_state) {
   display: flex;
@@ -740,19 +740,17 @@ a {
 }
 
 @keyframes fade-in {
-  0%,
-  50% {
-    visibility: hidden;
+  0%{
+    opacity: 0;
   }
   80%,
   100% {
-    visibility: visible;
     opacity: 1;
   }
 }
 
 @keyframes move {
-  70%,
+  90%,
   to {
     opacity: 1;
     transform: translateX(0px);
